force-app/main/default/objects/SL_Forecast__c/SL_Forecast__c.object-meta.xml
<CustomObject>
    <label>SL Forecast</label>
    <nameField>
        <displayFormat>SLF-{000000}</displayFormat>
        <label>SL Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SL Forecasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>