force-app/main/default/objects/SL_Forecast__c/fields/BFM_Flag__c.field-meta.xml
<CustomField>
    <fullName>BFM_Flag__c</fullName>
    <label>BFM Flag</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>