force-app/main/default/objects/SL_Forecast__c/fields/Revenue_Risk_Flag__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Risk_Flag__c</fullName>
    <label>Revenue Risk Flag</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>