force-app/main/default/objects/SL_Forecast__c/fields/Sales_Leader_SL_close_date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leader_SL_close_date__c</fullName>
    <description>Sales Leader Close Date</description>
    <inlineHelpText>Pick a date in the FQ for which this sales leader forecast pertains</inlineHelpText>
    <label>Sales Leader (SL) close date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>