force-app/main/default/objects/SL_Forecast__c/fields/Sales_Leader_SL_Tesla_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leader_SL_Tesla_Amount__c</fullName>
    <label>Sales Leader (SL) DC GPU Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>