force-app/main/default/objects/SL_Forecast__c/fields/Sales_Leader_SL_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Leader_SL_Total_Amount__c</fullName>
    <formula>Sales_Leader_SL_DGX_Amount__c  +  Sales_Leader_SL_GRID_Amount__c  +  Sales_Leader_SL_Other_Amount__c  +  Sales_Leader_SL_Tesla_Amount__c +  Sales_Leader_SL_RTX_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Leader (SL) Total Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>