force-app/main/default/objects/SL_Forecast__c/fields/SL_Commentary__c.field-meta.xml
<CustomField>
    <fullName>SL_Commentary__c</fullName>
    <label>SL Commentary</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>