force-app/main/default/objects/SL_Forecast__c/fields/SL_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>SL_Forecast_Category__c</fullName>
    <label>SL Forecast Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2-Commit</fullName>
                <default>true</default>
                <label>2-Commit</label>
            </value>
            <value>
                <fullName>3-Best Case</fullName>
                <isActive>false</isActive>
                <label>3-Best Case</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>