force-app/main/default/objects/SL_Forecast__c/fields/SL_Forecast_Name__c.field-meta.xml
<CustomField>
    <fullName>SL_Forecast_Name__c</fullName>
    <inlineHelpText>Please use format --&gt;SL Forecast-Region-YYQQ (fiscal year and quarter)</inlineHelpText>
    <label>SL Forecast Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>