force-app/main/default/objects/SL_Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SL_Forecast_Name__c</columns>
    <columns>Account__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Sales_Leader_SL_close_date__c</columns>
    <columns>Sales_Leader_SL_Total_Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>