force-app/main/default/objects/SL_Forecast__c/listViews/RTX_SL_Forecasts.listView-meta.xml
<ListView>
    <fullName>RTX_SL_Forecasts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>SL_Forecast_Name__c</columns>
    <columns>Sales_Leader_SL_RTX_Amount__c</columns>
    <columns>Revenue_Risk_Flag__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>BFM_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Leader_SL_RTX_Amount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>RTX SL Forecasts</label>
</ListView>